Fix home icon size on Firefox & css fix

--- a/src/components/manage/Blocks/NavigationAnchors/styles.less
+++ b/src/components/manage/Blocks/NavigationAnchors/styles.less
@@ -16,6 +16,7 @@ div#view .ui.container > .navigation-anchors {
   > .ui.container > .ui.menu {
     border: 0;
     box-shadow: none;
+    overflow-x: auto;
 
     .item {
       padding: 1rem;
