--- a/src/components/manage/Blocks/SiteBanner/style.less
+++ b/src/components/manage/Blocks/SiteBanner/style.less
@@ -48,11 +48,13 @@
       margin-bottom: 0.2em;
       font-size: 39px;
       font-weight: 700;
+      line-height: 1;
     }
 
     .lower {
       font-size: 14px;
       font-weight: 700;
+      line-height: 1;
       text-transform: uppercase;
     }
   }
